# ValueClaw

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  value_claw.example.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_compaction.py  test_db.py  test_persistence.py  test_rag_hybrid.py  test_skills.py  test_soul.py  test_strategy.py
value_claw/: __init__.py  __main__.py  config.py  daemon.py  db.py  init.py  main.py  onboard.py  server.py
value_claw/channels/: discord_bot.py  telegram_bot.py  whatsapp_bot.py
value_claw/core/: __init__.py  agent.py  compaction.py  portfolio.py  session_store.py  skill_loader.py  strategy.py  stt.py  tools.py  utils.py
value_claw/core/llm/: anthropic_client.py  fallback.py  gemini_oauth.py
value_claw/core/memory/: manager.py  storage.py
value_claw/core/retrieval/: reranker.py  retriever.py
value_claw/scheduler/: heartbeat.py  mlflow_scheduler.py  prefect_scheduler.py
value_claw/templates/cron/: jobs.example.yaml
value_claw/templates/skills/alternative-data/: CATEGORY.md
value_claw/templates/skills/alternative-data/fund-flows/: SKILL.md
value_claw/templates/skills/alternative-data/short-interest/: SKILL.md
value_claw/templates/skills/china-market/: CATEGORY.md
value_claw/templates/skills/china-market/akshare_data/: SKILL.md
value_claw/templates/skills/china-market/tushare-finance/: SKILL.md
value_claw/templates/skills/commodities/: CATEGORY.md
value_claw/templates/skills/commodities/commodity-analysis/: SKILL.md  commodity_analysis.py
value_claw/templates/skills/commodities/commodity-tracker/: SKILL.md  commodity_tracker.py
value_claw/templates/skills/communication/email/: SKILL.md  send_email.py
value_claw/templates/skills/communication/slack/: SKILL.md  slack_api.py
value_claw/templates/skills/communication/twitter-post/: SKILL.md  twitter_post.py
value_claw/templates/skills/data/: CATEGORY.md
value_claw/templates/skills/data/alert-monitor/: SKILL.md  alert_monitor.py
value_claw/templates/skills/data/chart-generator/: SKILL.md  chart_generator.py
value_claw/templates/skills/data/excel-export/: SKILL.md  excel_export.py
value_claw/templates/skills/data/news/: SKILL.md
value_claw/templates/skills/data/weather/: weather.py
value_claw/templates/skills/dev/github/: SKILL.md  gh.py
value_claw/templates/skills/equity/: CATEGORY.md
value_claw/templates/skills/equity/deep-analysis/: SKILL.md
value_claw/templates/skills/equity/stock_fundamentals/: SKILL.md
value_claw/templates/skills/equity/technical_analysis/: SKILL.md
value_claw/templates/skills/equity/trend-monitoring/: SKILL.md  trend_monitor.py
value_claw/templates/skills/fixed-income/: CATEGORY.md
value_claw/templates/skills/fixed-income/bond-analysis/: SKILL.md  bond_analysis.py
value_claw/templates/skills/fixed-income/yield-curve/: SKILL.md
value_claw/templates/skills/forex/: CATEGORY.md
value_claw/templates/skills/forex/fx-analysis/: SKILL.md  fx_analysis.py
value_claw/templates/skills/forex/fx-rates/: SKILL.md
value_claw/templates/skills/invest/: CATEGORY.md
value_claw/templates/skills/invest-frameworks/: CATEGORY.md
value_claw/templates/skills/invest-frameworks/arkwood-fiu/: SKILL.md
value_claw/templates/skills/invest-frameworks/dalio-allweather/: SKILL.md
value_claw/templates/skills/invest-frameworks/marks-cycles/: marks_analyze.py
value_claw/templates/skills/invest-frameworks/soros-macro/: soros_analyze.py
value_claw/templates/skills/invest-like-gurus/: CATEGORY.md
value_claw/templates/skills/invest-like-gurus/arkwood-fiu/: arkwood_analyze.py
value_claw/templates/skills/invest-like-gurus/buffett-value/: SKILL.md  buffett_analyze.py
value_claw/templates/skills/invest-like-gurus/dalio-allweather/: dalio_analyze.py
value_claw/templates/skills/invest-like-gurus/lynch-garp/: SKILL.md  lynch_analyze.py
value_claw/templates/skills/invest-like-gurus/marks-cycles/: SKILL.md
value_claw/templates/skills/invest-like-gurus/soros-macro/: SKILL.md
value_claw/templates/skills/invest/akshare_data/: akshare_data.py
value_claw/templates/skills/invest/crypto-onchain/: SKILL.md  crypto_data.py
value_claw/templates/skills/invest/dividend-tracker/: SKILL.md
value_claw/templates/skills/invest/earnings-tracker/: earnings_tracker.py
value_claw/templates/skills/invest/economic-calendar/: SKILL.md  econ_calendar.py
value_claw/templates/skills/invest/esg-rating/: SKILL.md
value_claw/templates/skills/invest/insider-tracker/: SKILL.md  insider_tracker.py
value_claw/templates/skills/invest/institutional-holdings/: SKILL.md  inst_holdings.py
value_claw/templates/skills/invest/ma-deals/: SKILL.md
value_claw/templates/skills/invest/market-sentiment/: SKILL.md  sentiment.py
value_claw/templates/skills/invest/options-flow/: options_flow.py
value_claw/templates/skills/invest/risk-analytics/: SKILL.md  risk_analytics.py
value_claw/templates/skills/invest/sec_filings/: SKILL.md  sec_filings.py
value_claw/templates/skills/invest/sector-rotation/: sector_rotation.py
value_claw/templates/skills/invest/stock_fundamentals/: SKILL.md  fundamentals.py
value_claw/templates/skills/invest/technical_analysis/: SKILL.md  technicals.py
value_claw/templates/skills/invest/trend-monitoring/: trend_monitor.py
value_claw/templates/skills/macro/: CATEGORY.md
value_claw/templates/skills/macro/central-bank-watch/: SKILL.md  central_bank_watch.py
value_claw/templates/skills/macro/global-liquidity/: SKILL.md  global_liquidity.py
value_claw/templates/skills/market-intel/: CATEGORY.md
value_claw/templates/skills/multi-asset/: CATEGORY.md
value_claw/templates/skills/pdf/: CATEGORY.md
value_claw/templates/skills/portfolio-signals/: CATEGORY.md
value_claw/templates/skills/productivity/: CATEGORY.md
value_claw/templates/skills/quant/: CATEGORY.md
value_claw/templates/skills/system/: CATEGORY.md
value_claw/templates/soul/: SOUL.md
value_claw/web/: __init__.py  app.py
value_claw/web/static/: dashboard.html  index.html
(+106 files in other folders)
